Fix overflow bug of the projects samples

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -54,6 +54,7 @@
 .projects-wrapper {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 2rem;
     margin-bottom: 10rem;
 }
